@@ -48,6 +48,7 @@
 
 static	int	function_definition(int);
 static	void	condition_macro(int);
+static	int	seems_datatype(const char *);
 static	int	reserved(char *);
 
 /*
@@ -298,60 +299,139 @@ C(yacc)
 		case C_TYPEDEF:
 			if (tflag) {
 				char	savetok[MAXTOKEN];
-				int	savelineno;
-				char	savefunc[MAXTOKEN];
-				int	savefunclineno;
-				int	typelevel = 0;
-				int	funclevel = 0;
+				int	savelineno = 0;
+				int	typedef_savelevel = level;
 
-				savetok[0] = savefunc[0] = 0;
-				while ((c = nexttoken("{}();", reserved)) != EOF) {
-					if (c == ';' && typelevel == 0)
-						break;
-					if (c == '(' || c == ')') {
-						if (c == '(') {
-							if (funclevel++ == 0) {
-								strlimcpy(savefunc, savetok, sizeof(savefunc));
-								savefunclineno = savelineno;
-								savetok[0] = 0;
-							}
-						}
-						if (c == ')') {
-							if (--funclevel == 0) {
-								strlimcpy(savetok, savefunc, sizeof(savetok));
-								savelineno = savefunclineno;
-								savefunc[0] = 0;
-							}
-						}
-						continue;
-					} else if (c == '{' || c == '}') {
-						if (c == '{')
-							typelevel++;
-						if (c == '}')
-							typelevel--;
-						continue;
-					}
-					if (savetok[0]) {
-						if (target == SYM)
-							PUT(savetok, lineno, sp);
-						if (target == REF && defined(savetok))
-							PUT(savetok, lineno, sp);
-						savetok[0] = 0;
-					}
-					if (c == SYMBOL) {
-						/* save lastest token */
-						strlimcpy(savetok, token, sizeof(savetok));
-						savelineno = lineno;
-					}
+				savetok[0] = 0;
+				if (level != 0) {
+					fprintf(stderr, "Warning: typedef in brace level > 0. [+%d %s]\n", lineno, curfile);
+					break;
 				}
+				c = nexttoken("{}(),;", reserved);
 				if (wflag && c == EOF) {
-					if (typelevel > 0)
-						fprintf(stderr, "Warning: typedef block unmatched. (last at level %d.)[+%d %s]\n", typelevel, lineno, curfile);
-					if (funclevel > 0)
-						fprintf(stderr, "Warning: () block unmatched. (last at level %d.)[+%d %s]\n", funclevel, lineno, curfile);
+					fprintf(stderr, "Warning: unexpected eof. [+%d %s]\n", lineno, curfile);
+					break;
+				} else if (c == C_ENUM || c == C_STRUCT || c == C_UNION) {
+					char *interest_enum = "{},;";
+					int c_ = c;
+
+					c = nexttoken(interest_enum, reserved);
+					/* read enum name if exist */
+					if (c == SYMBOL) {
+						if (target == SYM)
+							PUT(token, lineno, sp);
+						c = nexttoken(interest_enum, reserved);
+					}
+					for (; c != EOF; c = nexttoken(interest_enum, reserved)) {
+						switch (c) {
+						case CP_IFDEF:
+						case CP_IFNDEF:
+						case CP_IF:
+						case CP_ELIF:
+						case CP_ELSE:
+						case CP_ENDIF:
+						case CP_UNDEF:
+							condition_macro(c);
+							continue;
+						default:
+							break;
+						}
+						if (c == ';') {
+							if (savetok[0])
+								PUT(savetok, savelineno, sp);
+							if (level == typedef_savelevel)
+								break;
+						} else if (c == '{')
+							level++;
+						else if (c == '}') {
+							if (--level == typedef_savelevel)
+								break;
+						} else if (c == SYMBOL) {
+							if (c_ == C_ENUM) {
+								if (target == DEF && level > typedef_savelevel)
+									PUT(token, lineno, sp);
+								if (target == SYM && level == typedef_savelevel)
+									PUT(token, lineno, sp);
+							} else {
+								if (target == REF) {
+									if (level > typedef_savelevel && defined(token))
+										PUT(token, lineno, sp);
+								} else if (target == SYM) {
+									if (!defined(token))
+										PUT(token, lineno, sp);
+								} else if (target == DEF) {
+									/* save lastest token */
+									strlimcpy(savetok, token, sizeof(savetok));
+									savelineno = lineno;
+								}
+							}
+						}
+					}
+					if (c == ';')
+						break;
+					if (wflag && c == EOF) {
+						fprintf(stderr, "Warning: unexpected eof. [+%d %s]\n", lineno, curfile);
+						break;
+					}
+					if (wflag && level != typedef_savelevel || c != '}') {
+						fprintf(stderr, "Warning: uneven {}. [+%d %s]\n", lineno, curfile);
+						break;
+					}
+				} else if (c == SYMBOL) {
+					if (target == REF && defined(token))
+						PUT(token, lineno, sp);
+					if (target == SYM && !defined(token))
+						PUT(token, lineno, sp);
 				}
-				if (target == DEF && savetok[0])
-					PUT(savetok, lineno, sp);
+				savetok[0] = 0;
+				while ((c = nexttoken("(),;", reserved)) != EOF) {
+					switch (c) {
+					case CP_IFDEF:
+					case CP_IFNDEF:
+					case CP_IF:
+					case CP_ELIF:
+					case CP_ELSE:
+					case CP_ENDIF:
+					case CP_UNDEF:
+						condition_macro(c);
+						continue;
+					default:
+						break;
+					}
+					if (c == '(')
+						level++;
+					else if (c == ')')
+						level--;
+					else if (c == SYMBOL) {
+						if (level > 0) {
+							if (target == SYM)
+								PUT(token, lineno, sp);
+						} else {
+							/* put latest token if any */
+							if (savetok[0]) {
+								if (target == SYM)
+									PUT(savetok, savelineno, sp);
+							}
+							/* save lastest token */
+							strlimcpy(savetok, token, sizeof(savetok));
+							savelineno = lineno;
+						}
+					} else if (c == ',' || c == ';') {
+						if (savetok[0]) {
+							if (target == DEF)
+								PUT(savetok, lineno, sp);
+							savetok[0] = 0;
+						}
+					}
+					if (level == 0 && c == ';')
+						break;
+				}
+				if (wflag) {
+					if (c == EOF)
+						fprintf(stderr, "Warning: unexpected eof. [+%d %s]\n", lineno, curfile);
+					else if (level > 0)
+						fprintf(stderr, "Warning: () block unmatched. (last at level %d.)[+%d %s]\n", level, lineno, curfile);
+				}
 			}
 			break;
 		default:
@@ -400,8 +480,13 @@ int	target;
 				break;
 		}
 		/* pick up symbol */
-		if (c == SYMBOL && target == SYM)
-			PUT(token, lineno, sp);
+		if (c == SYMBOL) {
+			if (target == REF) {
+				if (seems_datatype(token))
+					PUT(token, lineno, sp);
+			} else if (target == SYM)
+				PUT(token, lineno, sp);
+		}
 	}
 	if (c == EOF)
 		return 0;
@@ -438,8 +523,13 @@ int	target;
 			break;
 
 		/* pick up symbol */
-		if (c == SYMBOL && target == SYM)
-			PUT(token, lineno, sp);
+		if (c == SYMBOL) {
+			if (target == REF) {
+				if (seems_datatype(token))
+					PUT(token, lineno, sp);
+			} else if (target == SYM)
+				PUT(token, lineno, sp);
+		}
 	}
 	return 0;
 }
@@ -497,6 +587,28 @@ condition_macro(cc)
 			}
 		}
 	}
+}
+/*
+ * seems_datatype: decide whether or not it is a data type.
+ *
+ *	i)	token	token
+ *	r)		0: not data type, 1: data type
+ */
+static int
+seems_datatype(token)
+const char *token;
+{
+	int length = strlen(token);
+	const char *p = token + length;
+
+	if (length < 3)
+		return 0;
+	if (strcmp(p - 2, "_t"))
+		return 1;
+	for (p = token; *p; p++)
+		if (islower(*p))
+			return 0;
+	return 1;
 }
 		/* sorted by alphabet */
 static struct words words[] = {
